# RAG_Music_Tutor

./: .gitignore  README.md  app.py  audio.py  check_gated.py  config.py  custom_types.py  docker-compose.yml  embedder.py  evaluation.py  gated_report.txt  ingest.py  ingest_all.py  llm.py  main.py  pyproject.toml  query_pipeline.py  retriever.py  scrape_all.py  scrape_report.txt
model/: btc_chords.py  btc_infer.py  btc_model.py  transformer_modules.py
