[project]
name = "rag-music-theory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "flagembedding>=1.4.0",
    "inngest>=0.5.18",
    "langchain-community==0.3.27",
    "librosa>=0.11.0",
    "numba>=0.60",
    "qdrant-client>=1.18.0",
    "ragas==0.4.3",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
]
